--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@
 .display-flex{
     display: flex;
 }
+
+.text-primary{
+    color: #ff900e;
+}
 /* dark 02 */
 .text-gray{
     color: #424242;
@@ -122,7 +126,28 @@ main > section{
 
 
 @media screen and (max-width: 576px) {
-    .navbar, .nav-llinks{
+    .navbar,
+     .nav-llinks,
+      .teams
+      {
         flex-direction: column;
     }
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .our-features{
+        margin-left: 20px;
+    }
+}
+
+
+/* medium size device */
+@media screen and(min-width: 576px) and (max-width: 992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin: 50px auto;
+    }
+    
 }
