--- a/styles.css
+++ b/styles.css
@@ -140,11 +140,20 @@ main > section{
 }
 
 
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
 
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
 
-
-
-
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
 
 
 
@@ -161,11 +170,19 @@ main > section{
       {
         flex-direction: column;
     }
-    .team-img-container{
+    .team-img-container, .facts-container, .sponsor-companies{
         grid-template-columns: repeat(1, 1fr);
     }
     .our-features{
         margin-left: 20px;
+    }
+    .facts-container{
+        justify-items: center;
+        gap: 24px;
+    }
+    .sponsor-companies{
+        justify-items: center;
+        gap: 50px;
     }
 }
 
@@ -178,5 +195,9 @@ main > section{
     .our-features{
         margin: 50px auto;
     }
-    
+    .sponsor-companies, .facts-container{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px;
+        justify-items: center;
+    }
 }
