--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,21 @@ main > section{
     margin-top: 0;
     margin-bottom: 0;
 }
+#experience-badge{
+    padding: 45px 42px;
+    font-weight: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+.featured-architect img{
+    width: 100%;
+}
+
 .feature-card{
     box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
     padding: 30px;
@@ -185,7 +200,8 @@ main > section{
 @media screen and (max-width: 576px) {
     .navbar,
      .nav-llinks,
-      .teams
+      .teams,
+      .features
       {
         flex-direction: column;
     }
@@ -203,12 +219,16 @@ main > section{
         justify-items: center;
         gap: 50px;
     }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
 }
 
 
 /* medium size device */
 @media screen and(min-width: 576px) and (max-width: 992px) {
-    .teams{
+    .teams, .features{
         flex-direction: column;
     }
     .our-features{
@@ -218,5 +238,9 @@ main > section{
         grid-template-columns: repeat(2, 1fr);
         gap: 50px;
         justify-items: center;
+    }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
     }
 }
