--- a/styles.css
+++ b/styles.css
@@ -189,7 +189,18 @@ main > section{
     filter: grayscale(100%);
 }
 
-
+footer {
+    background-color: #FFF4E7;
+    max-width: 80%;
+    margin: 0 auto ;
+    max-height: 100px;
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    
+}
 
 
 
